<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <EditText
            android:layout_gravity="center_vertical"
            android:id="@+id/travel_name_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/my_travel_experience_is"
            android:textSize="26dp"
            android:textStyle="italic"
            android:inputType="textPersonName"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:text="@string/precio"
            android:textSize="26dp"
            android:textStyle="italic"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/alan"
            android:scaleType="centerCrop"
            android:layout_gravity="center_vertical"
            />
        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/alan"
            android:scaleType="centerCrop"
            android:layout_gravity="center_vertical"
            />
        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/alan"
            android:scaleType="centerCrop"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:text="@string/experience"
            android:textSize="26dp"
            android:layout_gravity="center_vertical"
            android:textStyle="italic"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:text="@string/images"
            android:textSize="26dp"
            android:layout_gravity="center_vertical"
            android:textStyle="italic"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button"
            android:layout_gravity="center_vertical"
            android:text="@string/save_it"
            />
    </LinearLayout>


</LinearLayout>